--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <link rel="icon" href="assets/gatito.png">
 </head>
 <body>
+    <script>
+    const senha = prompt("Digite a senha para acessar:");
+    if (senha !== "ysa") {
+        document.body.innerHTML = "<h1>Acesso negado 😢</h1>";
+    }
+    </script>
     <div class="center">
     </div>
     <div class="effect" id="effect"></div>
