--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     </div>
     <div class="effect" id="effect"></div>
     <div class="gatito">
-        <img src="../assets/gatito.png" alt="gatito">
+        <img src="/assets/gatito.png" alt="gatito">
     </div>
     <div class="title">
         <h1>Clique no botão abaixo</h1>
         <button onclick=playSound()>
-            <img id="img" src="../assets/toque.png" data-nome="toque.png">
+            <img id="img" src="/assets/toque.png" data-nome="toque.png">
         </button>
     </div>
     <p id="piada">Sim, eu fiz um site só pra dar uma cantada...<br>
