--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="title">
         <h1>Clique no botão abaixo</h1>
         <button onclick=playSound()>
-            <img id="img" src="assets/toque.png" data-nome="toque.png">
+            <img id="img" src="assets/toque.png" data-nome="toque.png" style="filter: invert(1);">
         </button>
     </div>
     <p id="piada">Sim, eu fiz um site só pra dar uma cantada...<br>
