--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     }
     else{
         document.body.innerHTML = `
-        <div class="center">
+        <div class="center" id="center">
     </div>
     <div class="effect" id="effect"></div>
-    <div class="gatito">
+    <div class="gatito" id="gatito">
         <img src="assets/gatito.png" alt="gatito">
     </div>
     <div class="title">
